# tdfy

./: pyproject.toml
tdfy/: __init__.py
tdfy/hub/facebookresearch_dinov2_main/: requirements.txt
tdfy/sam3d_v1/: __init__.py  inference_utils.py  model.py
tdfy/sam3d_v1/checkpoints_configs/: pipeline.yaml  slat_decoder_gs.yaml  slat_decoder_gs_4.yaml  slat_decoder_mesh.yaml  slat_generator.yaml  ss_decoder.yaml  ss_generator.yaml
tdfy/sam3d_v1/lidra/: __init__.py  loop.py  mixhavior_test.py  optimization.py  optimization_test.py
tdfy/sam3d_v1/lidra/callback/: cached_prediction_dataset_writer.py  ema.py  ema_test.py
tdfy/sam3d_v1/lidra/callback/tdfy/: compute_metrics.py  compute_vlm_metrics.py  score_sample.py  tdfy_callback_test.py
tdfy/sam3d_v1/lidra/data/: collator.py  collator_test.py  processor.py  processor_test.py  utils_test.py
tdfy/sam3d_v1/lidra/init/: __init__.py  environment.py  patch.py  resolvers.py
tdfy/sam3d_v1/lidra/metrics/: precision_recall.py
tdfy/sam3d_v1/lidra/mixhavior/: pytorch.py  pytorch_test.py
tdfy/sam3d_v1/lidra/model/: io.py
tdfy/sam3d_v1/lidra/optimizer/: composite.py  composite_test.py
tdfy/sam3d_v1/lidra/pipeline/: inference_pipeline.py  inference_pipeline_layout_mitl_pointmap.py  inference_pipeline_pointmap.py  inference_pipeline_stage2_only.py  inference_pipeline_test.py  inference_pipeline_texture_swap.py  inference_utils.py  preprocess_utils.py
tdfy/sam3d_v1/lidra/run/: common.py  config.py  demo.py  inference.py  resume.py  train.py  visualize.py
tdfy/sam3d_v1/lidra/test/: util_test.py
(+159 files in other folders)
